<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:orientation="vertical" >

    <!-- Include Action Bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:background="#F8F8F8">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/include1"
            android:layout_toRightOf="@+id/include1"
            android:background="#F8F8F8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="#F8F8F8" >

                <Button
                    android:id="@+id/btn_l1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"

                    android:text="@string/l1" />

                <Button
                    android:id="@+id/btn_l2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"

                    android:text="@string/l2" />

                <!--<Button-->
                    <!--android:id="@+id/btn_l3"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->

                    <!--android:text="@string/l3" />-->

                <!--<Button-->
                    <!--android:id="@+id/btn_l4"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->

                    <!--android:text="@string/l4" />-->

                <!--<Button-->
                    <!--android:id="@+id/btn_l5"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->

                    <!--android:text="@string/l5" />-->

                <Button
                    android:id="@+id/btn_l6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"

                    android:text="@string/l6" />

                <!--<Button-->
                    <!--android:id="@+id/btn_l7"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->

                    <!--android:text="@string/l7" />-->

                <Button
                    android:id="@+id/btn_l8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:text="@string/l8" />

                <Button
                    android:id="@+id/btn_l9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:text="@string/l9" />

                <!--<Button-->
                    <!--android:id="@+id/btn_l10"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:text="@string/l10" />-->

                <!--<Button-->
                    <!--android:id="@+id/btn_l11"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->

                    <!--android:text="@string/l11" />-->

                <!--<Button-->
                    <!--android:id="@+id/btn_l12"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:text="@string/l12" />-->

                <!--<Button-->
                    <!--android:id="@+id/btn_l13"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:text="@string/l13" />-->

                <!--<Button-->
                    <!--android:id="@+id/btn_l14"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:text="@string/l14" />-->


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>



